src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@keyframes wave {
  0% {
    transform: rotate(0deg);
  }
  10% {
    transform: rotate(16deg);
  }
  20% {
    transform: rotate(-6deg);
  }
  30% {
    transform: rotate(16deg);
  }
  40% {
    transform: rotate(-4deg);
  }
  50% {
    transform: rotate(16deg);
  }
  60% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

.waving-hand {
  animation: wave 2.1s 0.6s infinite;
  transform-origin: 75% 75%;
  display: inline-block;
}

@layer components {
  .sidebar-icon {
    @apply relative flex items-center justify-center h-10 w-10 mt-1 md:mx-auto my-1 ml-1
     bg-gray-100 text-gray-500 hover:bg-gray-200 
     hover:text-gray-700 rounded-3xl hover:rounded-[13px] transition-all duration-300 cursor-pointer;
  }

  .dawn-mode .sidebar-icon {
    @apply bg-[#6BA49C] hover:bg-[#a1e6cb] text-gray-800;
  }

  .moon-mode .sidebar-icon {
    @apply bg-[#061E46] hover:bg-[#143E93] text-gray-300 hover:text-gray-100;
  }

  .sidebar-tooltip {
    @apply absolute w-auto px-3 py-2 m-0 min-w-max left-14 rounded-md shadow-md
    text-gray-700 bg-gray-200 
    text-xs font-medium 
    transition-all duration-300 scale-0 origin-left;
  }

  .mode {
    @apply bg-transparent p-0 m-0;
  }

  .active {
    @apply bg-gray-100 shadow-sm;
  }

  .dawn-mode .active {
    @apply bg-[#a1e6cb] shadow-sm;
  }

  .moon-mode .active {
    @apply bg-[#143E93] shadow-sm;
  }

  .dawn-mode {
    @apply text-white;
  }
}

.sun-mode {
  @apply bg-white text-black;
}

.dawn-mode {
  background: #34e89e;
  background: -webkit-linear-gradient(to right, #0f3443, #34e89e);
  background: linear-gradient(to right, #0f3443, #34e89e);
}

.moon-mode {
  background-color: black;
  background-image: url("https://4kwallpapers.com/images/wallpapers/windows-11-dark-mode-blue-stock-official-3840x2400-5630.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

